# mywisely

./: .env  .gitignore  adspower.py  bot.py  config.json  pyproject.toml  telegram_bot.py  utils.py
analyzer/: analyzer.py
db/: base.py  emails.py  tasks.py  users.py
processors/: gmail_manager.py  wisley_login.py
