[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mygiftcard"
version = "0.1.0"
description = "A simple gift card management system"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "aiohttp>=3.10.11",
    "loguru>=0.7.3",
    "opencv-python>=4.12.0.88",
    "pillow>=10.4.0",
    "requests>=2.28.0",
    "ultralytics>=8.3.168",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pytest>=7.0", 
    "black>=22.0",
    "flake8>=4.0",
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.hatch.build.targets.wheel]
packages = ["src/mygiftcard"]
